--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -8,24 +16,12 @@
 
 body {
   background-color: #e3e7eb;
-  width: auto;
-}
-
-@media screen and (max-width: 800px) {
-  .right a {
-    display: none;
-  }
-  .hamberger {
-    display: block;
-  }
-  .card {
-    display: none;
-  }
+  width: 100%;
 }
 
 /* Navbar */
 nav {
-  width: auto;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   background-color: #f4f3f3;
@@ -66,22 +62,51 @@ nav .left ul li {
 }
 
 .hamberger {
-  display: block;
+  display: none;
+}
+
+.hamberger-bars-items {
+  display: none;
+}
+
+.hamberger button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.hamberger-bars-items a {
+  display: flex;
+  background-color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+.hamberger-bars-items a.active {
+  background-color: rgba(0, 0, 0, 0.099);
 }
 
 /* Card */
 .card {
   display: flex;
-  margin: auto auto;
+  margin: auto;
+  margin-top: 80px;
+  box-shadow: 2px 2px 10px 2px lightgrey;
+  border-radius: 10px;
   background-color: #fff;
-  width: auto;
-  height: 230vh;
-  border-radius: 7px;
+  width: 60%;
 }
 
 /* Content Card */
 .content {
   width: 50%;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
 }
 
 .content_card {
@@ -120,6 +145,7 @@ nav .left ul li {
 
 .content_btn a {
   color: inherit;
+  text-decoration: none;
 }
 
 .content_btn a i {
@@ -145,6 +171,8 @@ nav .left ul li {
   margin: 100px auto;
   width: 50%;
   height: auto;
+  align-content: center;
+  text-align: center;
   border-radius: 7px;
   box-shadow: 2px 2px 10px 2px lightgrey;
 }
@@ -165,4 +193,38 @@ nav .left ul li {
 .profile_card h2 {
   text-align: center;
   margin-top: 5px;
+}
+
+@media screen and (max-width: 900px) {
+  .left ul li {
+    display: none;
+  }
+
+  .right a {
+    display: none;
+  }
+
+  .hamberger {
+    display: block;
+    margin: 0;
+  }
+
+  .profile {
+    width: 100%;
+    flex-direction: column;
+  }
+
+  .card {
+    width: 100%;
+    flex-direction: column;
+  }
+
+  .content {
+    width: auto;
+    padding: 30px;
+  }
+
+  div .content_card {
+    padding: 0;
+  }
 }
