--- a/assets/css/style_blog-details.css
+++ b/assets/css/style_blog-details.css
@@ -1,5 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -8,10 +16,12 @@
 
 body {
   background-color: #e3e7eb;
+  width: 100%;
 }
 
 /* Navbar */
 nav {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   background-color: #f4f3f3;
@@ -43,12 +53,41 @@ nav .left ul li {
   margin-right: 25px;
 }
 
-nav .right a {
+.right a {
   text-decoration: none;
   background-color: #111727;
   padding: 8px 20px;
   border-radius: 8px;
   color: #fff;
+}
+
+.hamberger {
+  display: none;
+}
+
+.hamberger-bars-items {
+  display: none;
+}
+
+.hamberger button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.hamberger-bars-items a {
+  display: flex;
+  background-color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+.hamberger-bars-items a.active {
+  background-color: rgba(0, 0, 0, 0.099);
 }
 
 /* Content */
@@ -112,4 +151,34 @@ h1 {
 .tech div {
   display: flex;
   gap: 10px;
+}
+
+@media screen and (max-width: 900px) {
+  .left ul li {
+    display: none;
+  }
+
+  .right a {
+    display: none;
+  }
+
+  .hamberger {
+    display: block;
+    margin: 0;
+  }
+
+  .profile {
+    width: 100%;
+    flex-direction: column;
+  }
+
+  .card {
+    width: 100%;
+    flex-direction: column;
+  }
+
+  .content {
+    width: auto;
+    padding: 30px;
+  }
 }
